src/styles/globals.scss
@import "./base/variables";
@import "./base/mixins";

/* color */
body {
    @include color-bright;
    &.dark-theme {
        @include color-dark;
    }
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

@media (prefers-color-scheme: dark) {
    body {
        @include color-dark;
        &.bright-theme {
            @include color-bright;
        }
    }
}

/* layout */
html,
body {
    background-color: var(--background-color);
    padding: 0;
    margin: 0;
}

html {
    text-size-adjust: none;
    -webkit-text-size-adjust: none; /*Chrome, Safari, newer versions of Opera*/
    -moz-text-size-adjust: none; /*Firefox*/
    -ms-text-size-adjust: none; /*Ie*/
    -o-text-size-adjust: none; /*old versions of Opera*/
}

span,
div {
    transition: all ease 0.2s 0s;
    -moz-transition: all ease 0.2s 0s;
    -webkit-transition: all ease 0.2s 0s;
}

/* font */
h1,
h2,
h3,
p,
a,
span,
div {
    color: var(--on-background-color);
    font-size: $fs-m;
    font-weight: $fw;
    letter-spacing: $ls;
    line-height: $lh-m;
    word-break: keep-all;
    overflow-wrap: break-word;
    @include media-mobile {
        font-size: $fs-m-mobile;
        line-height: $lh-m;
    }
}

a {
    color: var(--blue-color);
    &:hover {
        text-decoration: none;
    }
    &:not([href]) {
        color: var(--on-background-color);
    }
}

a * {
    box-sizing: border-box;
}

ul {
    padding: 0;
    margin: 0;
    list-style: none;
    li {
        font-size: $fs-m;
        @include media-mobile {
            font-size: $fs-m-mobile;
        }
        a {
            letter-spacing: $ls;
            font-weight: $fw;
            display: inline-block;
        }
        p {
            display: inline-block;
        }
    }
}

.col-md-6,
.col-md-12 {
    position: relative;
    width: 100%;
}
.col-md-6 {
    @include media-not-mobile {
        flex: 0 0 50%;
        max-width: 50%;
    }
}

.col-md-12 {
    flex: 0 0 100%;
    max-width: 100%;
}

